[gd_scene load_steps=3 format=3 uid="uid://c4lfd7lnr0f41"]

[ext_resource type="Script" uid="uid://h7avtd5pddb4" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ig7tw"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="FaithLabel" type="Label" parent="."]
layout_mode = 0
offset_right = 1120.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 30
text = "Faith: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FaithButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.022
anchor_bottom = 0.034
offset_left = 467.0
offset_top = 265.0
offset_right = 628.36
offset_bottom = 314.48
theme_override_font_sizes/font_size = 24
text = "Increase Faith"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 354.0
offset_right = 1120.0
offset_bottom = 780.0
texture = SubResource("PlaceholderTexture2D_ig7tw")

[node name="GlobalInfos" type="Label" parent="TextureRect"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 1119.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 18
text = "fpc: 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Upgrade1" type="Button" parent="TextureRect/GlobalInfos"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.022
anchor_bottom = 0.034
offset_left = 121.0
offset_top = 69.0
offset_right = 355.36
offset_bottom = 143.436
theme_override_font_sizes/font_size = 24
text = "Upgrade fpc
(faith per click)"

[node name="Upgrade1Cost" type="Label" parent="TextureRect/GlobalInfos/Upgrade1"]
layout_mode = 1
anchors_preset = -1
anchor_right = 3.725
anchor_bottom = 0.975
offset_left = 517.0
offset_top = -3.0
offset_right = -3.77502
offset_bottom = -3.0
theme_override_font_sizes/font_size = 27
text = "Cost: 10 Faith"
horizontal_alignment = 1
vertical_alignment = 1
